--- a/index.html
+++ b/index.html
@@ -229,6 +229,10 @@
     this.classList.add('trigger-enter');
     setTimeout(() => this.classList.add('trigger-enter-active'), 150);
     background.classList.add('open');
+
+    const dropdown = this.querySelector('.dropdown');
+    const dropdownCoords = dropdown.getBoundingClientRect();
+    
   }
   function handleLeave() {
     this.classList.remove('trigger-enter', 'trigger-enter-active');
