Get the coords of nav element

--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
 
     const dropdown = this.querySelector('.dropdown');
     const dropdownCoords = dropdown.getBoundingClientRect();
-    
+    const navCoords = nav.getBoundingClientRect();
   }
   function handleLeave() {
     this.classList.remove('trigger-enter', 'trigger-enter-active');
